--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700&display=swap"
       rel="stylesheet"
     />
-    <title>Vite App</title>
+    <title>Loterias</title>
   </head>
   <body style="margin: 0">
     <div id="root"></div>
